OpenLGTV BCM: fix NetCast and Yahoo Widget Engine configs
git-svn-id: http://svn.openlgtv.org.ru@206 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -2,8 +2,8 @@
 <BODY>
 <FONT SIZE="+5">
 <CENTER>
-OpenLGTV BCM Web UI<BR/><BR/>
-[TODO]<BR/>
+<BR /><BR />OpenLGTV BCM Web UI<BR /><BR />
+[TODO]<BR />
 </CENTER>
 </FONT>
 </BODY>
