OpenLGTV BCM: small change on OpenLGTV BCM WebUI TODO page
git-svn-id: http://svn.openlgtv.org.ru@208 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -1,11 +1,10 @@
 <HTML>
 <BODY>
-<FONT SIZE="+5">
+<FONT SIZE="+6">
 <CENTER>
-<BR /><BR />OpenLGTV BCM Web UI<BR /><BR />
-[TODO]<BR />
+<BR/><BR/><BR/>OpenLGTV BCM Web UI<BR/><BR/>
+[TODO]<BR/>
 </CENTER>
 </FONT>
 </BODY>
 </HTML>
-
