--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -5,7 +5,9 @@
 <BODY>
 <FONT SIZE="+6">
 <CENTER>
-<BR/><BR/><BR/>OpenLGTV BCM Web UI<BR/><BR/>
+<BR/><BR/>
+<IMG SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM"/>
+<BR/>OpenLGTV BCM Web UI<BR/><BR/>
 [TODO]<BR/>
 </CENTER>
 </FONT>
