OpenLGTV BCM: samplekeycontrol.cgi as CGI samplekeycontrol.html replacement
git-svn-id: http://svn.openlgtv.org.ru@237 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<META http-equiv="refresh" content="3;url=samplekeycontrol.html">
+<META http-equiv="refresh" content="3;url=samplekeycontrol.cgi">
 </HEAD>
 <BODY>
 <FONT SIZE="+6">
