OpenLGTV BCM: settings presentation page, still not finished
git-svn-id: http://svn.openlgtv.org.ru@238 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<META http-equiv="refresh" content="3;url=samplekeycontrol.cgi">
+<META http-equiv="refresh" content="2;url=settings.cgi">
 </HEAD>
 <BODY>
 <FONT SIZE="+6">
