OpenLGTV BCM: version 0.3.0-alpha6, 36KB free space, more WebUI work - menu prototype, button elements support
git-svn-id: http://svn.openlgtv.org.ru@250 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<META http-equiv="refresh" content="2;url=settings.cgi">
+<META http-equiv="refresh" content="0;url=home.cgi">
 </HEAD>
 <BODY>
 <FONT SIZE="+6">
