OpenLGTV BCM: NFS/CIFS Network Share mounting feature - in both init scripts and WebUI - save button works, too - needs testing
git-svn-id: http://svn.openlgtv.org.ru@265 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -8,7 +8,7 @@
 <BR/><BR/>
 <IMG SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM"/>
 <BR/>OpenLGTV BCM Web UI<BR/><BR/>
-[TODO]<BR/>
+[Work in Progress]<BR/>
 </CENTER>
 </FONT>
 </BODY>
