OpenLGTV BCM: license info, visual improvements
git-svn-id: http://svn.openlgtv.org.ru@284 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -1,4 +1,6 @@
 <HTML>
+<!-- index.html for OpenLGTV BCM WebUI by xeros -->
+<!-- Source code released under GPL License -->
 <HEAD>
 <META http-equiv="refresh" content="0;url=home.cgi">
 </HEAD>
