OpenLGTV BCM: Intenet Browser minor changes
git-svn-id: http://svn.openlgtv.org.ru@297 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/keyboard.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/keyboard.html
@@ -282,7 +282,8 @@ function SearchOnGoogle()
 
 	<div style="position: absolute; left: 5px; top: 5px;">
 		<form id="URL" name="URL">
-			<font size="4"><b>Enter URL or text to search:</b></font><br>
+			<font size="4"><b><center>OpenLGTV BCM Internet Browser</center></b></font><br>
+			<font size="3"><b>Enter URL or text to search:</b></font><br>
 			<input id="txtURL" type="textarea" style="width:500px" value=""/>
 		</form>
 	</div>	
@@ -291,36 +292,37 @@ function SearchOnGoogle()
 		<img src="Images/Keyboard/tapkey.png" align="middle">
 	</div>
 	
-	<div style="position: absolute; left: 680px; top: 5px;">
+	<!-- div style="position: absolute; left: 680px; top: 5px;" -->
+	<div style="position: absolute; left: 680px; top: 25px;">
 		<Table cellspacing=2>
 			<tr>
 				<td align="center">
-					<a onClick="javascript:SearchOnGoogle();" href="#"><img src="Images/Keyboard/red_button.png" align="middle"></a>
+					<a onClick="javascript:SearchOnGoogle();" href="#"><img src="Images/Keyboard/red_button.png" align="middle" border="0" /></a>
 					<br>
 					<b>Search on Google</b>
 				</td>
 				<td align="center">
-					<img src="Images/Keyboard/green_button.png" align="middle">
+					<img src="Images/Keyboard/green_button.png" align="middle" border="0" />
 					<br>
 					<b>Switch Page</b>
 				</td>
 				<td align="center">
-					<a onClick="javascript:GoToURL();" href="#"><img src="Images/Keyboard/yellow_button.png" align="middle"></a>
+					<a onClick="javascript:GoToURL();" href="#"><img src="Images/Keyboard/yellow_button.png" align="middle" border="0" /></a>
 					<br>
 					<b>Go to URL</b>
 				</td>
 				<td align="center">
-					<a onClick="javascript:BackSpace();" href="#"><img src="Images/Keyboard/blue_button.png" align="middle"></a>
+					<a onClick="javascript:BackSpace();" href="#"><img src="Images/Keyboard/blue_button.png" align="middle" border="0" /></a>
 					<br>
 					<b>Backspace</b>
 				</td>
 				<td align="center">
-					<img src="Images/Keyboard/back_button.png" align="middle">
+					<img src="Images/Keyboard/back_button.png" align="middle" border="0" />
 					<br>
 					<b>Back</b>
 				</td>
 				<td align="center">
-					<img src="Images/Keyboard/exit_button.png" align="middle">
+					<img src="Images/Keyboard/exit_button.png" align="middle" border="0" />
 					<br>
 					<b>Exit</b>
 				</td>
