--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/mainpage.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/mainpage.html
@@ -14,6 +14,7 @@
 <!--
 
 document.onkeydown = check;
+window.onload = OnLoadSetCurrent;
      
  function check(e)
 	{
@@ -43,10 +44,9 @@ document.onkeydown = check;
 		}catch(Exception){}
 	}
 
-	function setCurrent(element)
+	function OnLoadSetCurrent(element)
 	{
-	var string = element.id;
-	current = string.slice(1,string.length);
+	top.frames["Keyboard"].focus();
 	}
 	
 document.defaultAction = true;
