OpenLGTV BCM: logo image for web server so WebUI should work without delay if there is no Internet access
git-svn-id: http://svn.openlgtv.org.ru@308 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/mainpage.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/mainpage.html
@@ -62,7 +62,7 @@ document.defaultAction = true;
 <FONT SIZE="+6">
 <CENTER>
 <BR/>
-<IMG SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM"/>
+<IMG SRC="Images/openlgtvbcm_logo.png" ALT="OpenLGTV BCM"/>
 <BR/>OpenLGTV BCM Internet Browser<BR/><BR/>
 [Work in Progress]<BR/>
 </CENTER>
