--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -8,7 +8,7 @@
 <FONT SIZE="+6">
 <CENTER>
 <BR/><BR/>
-<IMG SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM"/>
+<IMG SRC="Images/openlgtvbcm_logo.png" ALT="OpenLGTV BCM"/>
 <BR/>OpenLGTV BCM Web UI<BR/><BR/>
 [Work in Progress]<BR/>
 </CENTER>
