--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/samplekeycontrol.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/samplekeycontrol.html
@@ -16,7 +16,7 @@
 <SCRIPT language="JavaScript" type="text/javascript" src="js/control.js"></script>
 </head>
 <body>
-<IMG align="right" SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM" style="position: relative; right: 30px; top: 30px;"/>
+<IMG align="right" SRC="Images/openlgtvbcm_logo.png" ALT="OpenLGTV BCM" style="position: relative; right: 30px; top: 30px;"/>
 	<div style="position: absolute; left: 10px; top: 15px; width:500px">
 		<form id="URL" name="URL">
 			<div id="txtURLParent" style="background-color:white;height:32px;">
