OpenLGTV BCM: new Internet Browser page in vertical view and revert old tapkey.png by nicola_12345
git-svn-id: http://svn.openlgtv.org.ru@324 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser.html
@@ -10,7 +10,7 @@
     <TITLE>OpenLGTV BCM Browser</TITLE>
 
   </HEAD>
-  <FRAMESET rows="124,*" frameborder=0>
+  <FRAMESET cols="370,*" frameborder=0>
   <frame name="Keyboard" src="keyboard.html">
   <frame name="MainPage" src="mainpage.html">
   </FRAMESET>
