OpenLGTV BCM: version 0.4.0, 56KB free space, vod cgi scripts fixes
git-svn-id: http://svn.openlgtv.org.ru@454 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -90,8 +90,8 @@ document.defaultAction = true;
 <tr>
 	<td align="center"><a id="c1" onKeyPress="javascript:setCurrent(this);return false" href='../vod/ipla.cgi' target='_parent'><img src="http://www.ipla.tv/images/logo.png" border=0></a></td>
 	<td align="center"><a id="c2" onKeyPress="javascript:setCurrent(this);return false" href='../vod/tvp.cgi' target='_parent'><img src="http://s.v3.tvp.pl/files/portal/gfx/top_nav/tvp_pl.png" border=0></a></td>
-	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2">Internet Browser</font></a></td>
-	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../home.cgi' target='_parent'><font size="+2">WebUI</font></a></td>
+	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../vod/netplayer.cgi' target='_parent'><font size="+2">NetPlayer alternative</font></a></td>
+	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2">Internet Browser</font></a></td>
 </tr>
 <tr>
 	<td align="center"><a id="c5" onKeyPress="javascript:setCurrent(this);return false" href='http://connectedtv-1870b.orange.fr' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/orange.png" border=0></a></td>
