OpenLGTV BCM: fix for upgrade from zip file, ywe first time configuration, abc.net.au link
git-svn-id: http://svn.openlgtv.org.ru@479 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -210,7 +210,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c81" onKeyPress="javascript:setCurrent(this);return false" href='http://iptv.rthk.hk/lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/rthk.png" border=0></a></td>
 	<td align="center"><a id="c82" onKeyPress="javascript:setCurrent(this);return false" href='http://www.cbsinteractive.com.au/iptv/lg/netcast/cnet/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/cnet.png" border=0></a></td>
 	<td align="center"><a id="c83" onKeyPress="javascript:setCurrent(this);return false" href='http://www.espnstar.tv/lg-app-source/ESPNLG/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/espnstar.png" border=0></a></td>
-	<td align="center"><a id="c84" onKeyPress="javascript:setCurrent(this);return false" href='http://www..net.au/iview/api/lg/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/abc-iview.png" border=0></a></td>
+	<td align="center"><a id="c84" onKeyPress="javascript:setCurrent(this);return false" href='http://www.abc.net.au/iview/api/lg/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/abc-iview.png" border=0></a></td>
 </tr>
 <tr>
 	<td align="center"><a id="c85" onKeyPress="javascript:setCurrent(this);return false" href='http://video.walla.co.il/?w=//1666172/@item.v9.lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/walla.png" border=0></a></td>
