OpenLGTV BCM: move proxy*.sh to /scripts/ dir, try to fix 'back' button in links.html
git-svn-id: http://svn.openlgtv.org.ru@530 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -50,8 +50,8 @@ window.onload = OnLoadSetCurrent;
 			//the back button on the remote control have been pressed
 			//NetCastBack API
 			//window.NetCastBack();
-			//history.go(-1);
-			window.location='../browser.cgi';
+			history.go(-1);
+			//window.location='../browser.cgi';
 			}
 		else if (key==1001) 
 			{
