OpenLGTV BCM: NetCast links available from WebUI with 'Info' button, changed NetCast links start to run in second web browser instance (if Internet Browser is proxied) to get rid of proxy, 'REC' and 'LIVE TV' buttons in remote.cgi
git-svn-id: http://svn.openlgtv.org.ru@623 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!--  OpenLGTV Remote Control by mihaifireball   -->
-
 <head>
   <title>OpenLGTV Remote Control</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+  <style type="text/css">
+    input {font-size: 11pt;}
+  </style>
 </head>
 <body>
 <center>
-<br>
-<h1>OpenLGTV Remote Control</h1>
-
+<h2>OpenLGTV Remote Control
 <div style="width: 350px; background-color:#91E3F3;">
-
+<font size="-2">
 <br>
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=08';" value="Power" style="background-color:red; height: 25px; width: 68px;" />
 <br><br>
@@ -24,7 +24,7 @@
 &nbsp
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=F0';"  style="height: 25px; width: 67px" value="TV/RAD"/> 
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=11';"  style="height: 25px; width: 100px"  value="1 .,;@"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRcode=11';"  style="height: 25px; width: 100px" value="1 .,;@"/>
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=12';"  style="height: 25px; width: 100px" value="2 abc"/>
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=13';"  style="height: 25px; width: 100px" value="3 def"/>
 <br><br>
@@ -106,7 +106,11 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=9F';"  style="height: 25px; width: 70px" value="APP/*"/>
 <br><br>
-</div>
+<input type=button onClick="javascript:window.location='remote.cgi?IRcode=BD';"  style="height: 25px; width: 70px" value="REC"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRcode=9E';"  style="height: 25px; width: 70px" value="LIVE TV"/>
+</font>
+</div></h2>
 </center>
 </body>
 </html>
