OpenLGTV BCM: exclude RELEASE from kill list on installation, more new NetCast services, OPENRELEASE update from 2.1.0 to 2.1.2 from uinput branch, make uinput.ko module loading by default
git-svn-id: http://svn.openlgtv.org.ru@658 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -338,12 +338,32 @@ document.defaultAction = true;
 	<td align="center"><a id="c174" onKeyPress="javascript:setCurrent(this);return false" href='http://bptv.bigpond.com/lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bigpond.gif" border=2></a></td>
 </tr>
 <tr>
-	<td align="center"><a id="c175" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.accu-weather.com/lg/tv2/default.aspx' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/accuweather.png" border=2></a></td>
-	<td align="center"><a id="c176" onKeyPress="javascript:setCurrent(this);return false" href='http://mini.maxdome.de/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/maxdome.png" border=2></a></td>
-	<td align="center"><a id="c177" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.accu-weather.com/lg/tv2/default.aspx' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/accuweather.png" border=2></a></td>
-	<td align="center"><a id="c178" onKeyPress="javascript:setCurrent(this);return false" href='http://mini.maxdome.de/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/maxdome.png" border=2></a></td>
-	<td align="center"><a id="c179" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.accu-weather.com/lg/tv2/default.aspx' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/accuweather.png" border=2></a></td>
-	<td align="center"><a id="c180" onKeyPress="javascript:setCurrent(this);return false" href='http://mini.maxdome.de/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/maxdome.png" border=2></a></td>
+	<td align="center"><a id="c175" onKeyPress="javascript:setCurrent(this);return false" href='https://www.blinkbox.com/widget' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/blinkbox.png" border=2></a></td>
+	<td align="center"><a id="c176" onKeyPress="javascript:setCurrent(this);return false" href='http://netcast.goldiran.ir/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/goldiran.png" border=2></a></td>
+	<td align="center"><a id="c177" onKeyPress="javascript:setCurrent(this);return false" href='http://www.beethovenmb.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bmb.png" border=2></a></td>
+	<td align="center"><a id="c178" onKeyPress="javascript:setCurrent(this);return false" href='http://www.majorcineplex.com/lgsmarttv/templates/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/majorcineplex.png" border=2></a></td>
+	<td align="center"><a id="c179" onKeyPress="javascript:setCurrent(this);return false" href='http://abntv.24imedia.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/abnamro.png" border=2></a></td>
+	<td align="center"><a id="c180" onKeyPress="javascript:setCurrent(this);return false" href='http://dfttv.24imedia.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/dft.png" border=2></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c181" onKeyPress="javascript:setCurrent(this);return false" href='http://tuninfm.24imedia.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/tuninfm.png" border=2></a></td>
+	<td align="center"><a id="c182" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.adnstream.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/adnstream.png" border=2></a></td>
+	<td align="center"><a id="c183" onKeyPress="javascript:setCurrent(this);return false" href='http://sportal.rs/lg/news.php' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/sportalrs.png" border=2></a></td>
+	<td align="center"><a id="c184" onKeyPress="javascript:setCurrent(this);return false" href='http://www.wetter.at/lg-netcast' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/wetterat.png" border=2></a></td>
+	<td align="center"><a id="c185" onKeyPress="javascript:setCurrent(this);return false" href='http://diepresse.com/bigscreen/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/diepresse.png" border=2></a></td>
+	<td align="center"><a id="c186" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.thejakartapost.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/thejakartapost.png" border=2></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c187" onKeyPress="javascript:setCurrent(this);return false" href='http://sites.thestar.com.my/lgnetcast/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/thestar.png" border=2></a></td>
+	<td align="center"><a id="c188" onKeyPress="javascript:setCurrent(this);return false" href='http://www.hotelsthailand.com/lg_smarttv/index.php' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/hotelsthailand.png" border=2></a></td>
+	<td align="center"><a id="c189" onKeyPress="javascript:setCurrent(this);return false" href='http://lge.yotaplay.ru/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/yotaplay.png" border=2></a></td>
+	<td align="center"><a id="c190" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.ole.com.ar/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/ole.png" border=2></a></td>
+	<td align="center"><a id="c191" onKeyPress="javascript:setCurrent(this);return false" href='http://wealthtv.com/tv/lg/3d/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/wealthtv3d.png" border=2></a></td>
+	<td align="center"><a id="c192" onKeyPress="javascript:setCurrent(this);return false" href='http://netcast-panama.guiadegusta.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/degusta.png" border=2></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c193" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.accu-weather.com/lg/tv2/default.aspx' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/accuweather.png" border=2></a></td>
+	<td align="center"><a id="c194" onKeyPress="javascript:setCurrent(this);return false" href='http://mini.maxdome.de/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/maxdome.png" border=2></a></td>
 </tr>
 </table>
 
