OpenLGTV BCM: start work on pin authorization to WebUI, index.cgi is now default instead of index.html, rc.ywe and /mnt/ywe* cleanup
git-svn-id: http://svn.openlgtv.org.ru@861 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -1,3 +1,5 @@
+<content-type: text/html>
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!--  OpenLGTV Remote Control by mihaifireball   -->
@@ -109,6 +111,9 @@
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=BD';"  style="height: 25px; width: 70px" value="REC"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=9E';"  style="height: 25px; width: 70px" value="LIVE TV"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRcode=DC';"  style="height: 25px; width: 70px" value="3D"/>
+<br><br>
 </font>
 </div></h2>
 </center>
