OpenLGTV BCM: pin authorization dialog - not finished
git-svn-id: http://svn.openlgtv.org.ru@862 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/index.html
@@ -4,8 +4,9 @@
 <HEAD>
 <META http-equiv="refresh" content="0;url=home.cgi">
 </HEAD>
-<BODY>
-<FONT SIZE="+6">
+<!-- index.cgi reads from here -->
+<BODY BGCOLOR="BLACK">
+<FONT SIZE="+6" COLOR="YELLOW">
 <CENTER>
 <BR/><BR/>
 <IMG SRC="Images/openlgtvbcm_logo.png" ALT="OpenLGTV BCM"/>
