--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 <center>
-<h2>OpenLGTV Remote Control
-<div style="width: 350px; background-color:#91E3F3;">
+<div style="width: 350px; background-color:#151515;">
 <font size="-2">
 <br>
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=08';" value="Power" style="background-color:red; height: 25px; width: 68px;" />
@@ -115,7 +114,7 @@
 <input type=button onClick="javascript:window.location='remote.cgi?IRcode=DC';"  style="height: 25px; width: 70px" value="3D"/>
 <br><br>
 </font>
-</div></h2>
+</div><font size="+2"><b>OpenLGTV Remote Control</b></font>
 </center>
 </body>
 </html>
