OpenLGTV BCM: remote control page fixes
git-svn-id: http://svn.openlgtv.org.ru@938 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/ywe/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/ywe/index.html
@@ -1,3 +1,6 @@
+<content-type: text/html>
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <!-- index.html for OpenLGTV BCM by xeros -->
 <!-- error message if Yahoo Widgets Engine is not found -->
