OpenLGTV BCM: Changelog.txt -> Changelog.html for easy http access into SVN
git-svn-id: http://svn.openlgtv.org.ru@991 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -1,4 +1,4 @@
-content-type: text/html
+<HTML><BODY><PRE>
 
 OpenLGTV BCM Changelog
 
@@ -334,3 +334,5 @@ no need to use the procedure for erasing and flashing, just run /mnt/usb1/Drive1
 0.0.1:
 
     * initial release, had problems running init rcS script 
+
+</PRE></BODY></HTML>
