OpenLGTV BCM: prevent OPENRELEASE and rc.release scripts running from shell when (OPEN)RELEASE is already running
git-svn-id: http://svn.openlgtv.org.ru@997 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -10,6 +10,7 @@ OpenLGTV BCM Changelog
     * FIX: fallback with NTFS partitions remounting as read-only when remounting read-write wont succeed (problems with filesystem)
     * FIX: process /etc/profile in chrooted installer
     * FIX: missing /var/spool symlink for working crontab
+    * FIX: prevent from OPENRELEASE executing from shell when (OPEN)RELEASE is already running
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
