OpenLGTV BCM: sstrip read_scan_complete, remove comments in /etc/protocols and /etc/services, replace chrt and chat binaries with BusyBox applets in SmartTV image - both GP2B and GP3B images now fit partitions size, make create_img.sh output more user friendly
git-svn-id: http://svn.openlgtv.org.ru@999 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -29,6 +29,7 @@ OpenLGTV BCM Changelog
     * CHANGE: automount supported by kernel but not RELEASE filesystems on USB storage devices into /mnt/usb{1,2}/Drive{5-8} dirs only to make them visible in media player
     * CHANGE: split part of rcS code into rc.userdirs, rc.passwd and rc.ssh as preparation for chrooted services usability for installer
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
+    * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
 
 0.5.0-beta3 [2011.12.24]:
 
