OpenLGTV BCM: fix logic in info_RELEASE.sh for variable check, FileManager: fix divide by zero error in counters when copy/move progress raised error without creating destination file/dir
git-svn-id: http://svn.openlgtv.org.ru@1001 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -7,6 +7,7 @@ OpenLGTV BCM Changelog
     * FIX: FileManager: better handling of dirs with special characters
     * FIX: FileManager: get rid of 'awk' in free/total space counting and proper handle 'df' multiline output for space info
     * FIX: FileManager: crop full path if it doesn't fit panel width
+    * FIX: FileManager: update free/total space in different JavaScript context to let proper panels scale even when no free/total space info is available yet
     * FIX: fallback with NTFS partitions remounting as read-only when remounting read-write wont succeed (problems with filesystem)
     * FIX: process /etc/profile in chrooted installer
     * FIX: missing /var/spool symlink for working crontab
