OpenLGTV BCM: don't mark that first backup has been made if there happen errors during making backup
git-svn-id: http://svn.openlgtv.org.ru@1002 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -12,6 +12,7 @@ OpenLGTV BCM Changelog
     * FIX: process /etc/profile in chrooted installer
     * FIX: missing /var/spool symlink for working crontab
     * FIX: prevent from OPENRELEASE executing from shell when (OPEN)RELEASE is already running
+    * FIX: don't mark that first backup on install was done when there happened errors during backup
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
