--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -13,6 +13,7 @@ OpenLGTV BCM Changelog
     * FIX: missing /var/spool symlink for working crontab
     * FIX: prevent from OPENRELEASE executing from shell when (OPEN)RELEASE is already running
     * FIX: don't mark that first backup on install was done when there happened errors during backup
+    * FIX: few partition mounts on SmartTV models
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
