--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -35,6 +35,7 @@ OpenLGTV BCM Changelog
     * CHANGE: replace ntfs-3g binary with lowntfs-3g with FUSE low-level interface instructions
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
+    * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
 
 0.5.0-beta3 [2011.12.24]:
 
