--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -28,7 +28,9 @@ OpenLGTV BCM Changelog
     * ADD: experimental opkg packages support on extroot (with default OpenWRT Kamikaze 8.09.2 packages repository until we'll make our own repository)
     * ADD: get back previously removed tools + few more added (curl, ltrace, strace, tcpdump, top, opkg, msdl, e2fsck, ntfsprogs) into extroot dir in addons
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
-    * UPDATE: NTFS-3G upgrade to version 2012.1.15
+    * UPDATE: ntfs-3g upgrade to version 2012.1.15
+    * UPDATE: tmux upgrade from 1.5 to 1.6
+    * UPDATE: dropbear ssh server upgrade from 0.53.1 to 2011.54, with scp progress bar compiled in
     * CHANGE: FileManager: last_played.info file is now stored in /tmp instead of played dir location - no need to have write access to mounted shares for slideshow/dir playback
     * CHANGE: FileManager: separate file/dir icons from filenames in table to make better vertical allignment
     * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
