--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -15,6 +15,7 @@ OpenLGTV BCM Changelog
     * FIX: don't mark that first backup on install was done when there happened errors during backup
     * FIX: few partition mounts on SmartTV models
     * FIX: rc.usb make actions on hotplug concurrently on each partitions when multiple partitions get found
+    * FIX: file not found (404) error web page to handle possible problems when file accessed on network share is not achievable (common from not enough permissions)
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
